[FEAT] change voiceid to gif

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <td> now </td>
                     <td> my own time </td>
                     <td> mostly single-authored </td>
-                    <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p21">[21],</a><a href="#p22">[22],</a><a href="#p23">[23]</a> </td>
+                    <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p21">[21]</a><a href="#p22">[22]</a><a href="#p23">[23]</a> </td>
                     <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: forestgreen;">SB</span>,<span style="color: brown;">HCI</span> </td>
                 </tr>
                 <tr>
@@ -231,7 +231,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2020voice.png" alt="lin2020voice" border="1" style="width:100%">
+                            <img src="./img/publications/lin2020voice.gif" alt="lin2020voice" border="1" style="width:100%">
                         </div>
                         <div class="textcolumn">
                             [23]&nbsp;<b class="text-primary" id="p23"> VoiceID on the fly: Real-time Register-free Online-learning Speaker Recognition </b>
