[FEAT] update proj reference

--- a/proj/neuralMDL/index.html
+++ b/proj/neuralMDL/index.html
@@ -50,7 +50,7 @@
                     [1] Lin, B. (2019). Unsupervised Attention Mechanism across Neural Network Layers. <em> arXiv preprint arXiv:1902.10658. </em>
                     <br> [<a href="https://arxiv.org/abs/1902.10658" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019unsupervised.txt" style="color:#268fd6">bibTex</a>]&nbsp;
                     <br>
-                    [2] Lin, B. (2019). Neural Networks as Model Selection with Incremental MDL Normalization. <em> Human Brain and Artificial Intelligence, (Vol. 1072, pp. 195-209). Springer Nature.</em>
+                    <br >[2] Lin, B. (2019). Neural Networks as Model Selection with Incremental MDL Normalization. <em> Human Brain and Artificial Intelligence, (Vol. 1072, pp. 195-209). Springer Nature.</em>
                     <br> [<a href="https://link.springer.com/chapter/10.1007/978-981-15-1398-5_14" style="color:#268fd6">link</a>][<a href="https://www.baihan.nyc/bibTex/lin2019neural.txt" style="color:#268fd6">bibTex</a>]&nbsp;
                     <br>
                     <!-- <img src="../../img/random/sleep.jpg" alt=""> -->
@@ -71,15 +71,15 @@
                 <p class="mb-5 text-primary">
                     We tested it in several scenarios, where UAM offers a lens for a simple two-layer neural network with or without a normalization factor (computed as the incremental minimum description length that I proposed in the paper).
                     <br>
-                    <img src="./img/nn.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
+                    <img src="./img/nn.png" alt=""  style="width:70%;display:block;margin-left:auto;margin-right:auto;">
                     <br>
                     Also in recurrent neural networks:
                     <br>
-                    <img src="./img/rnn.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
+                    <img src="./img/rnn.png" alt=""  style="width:70%;display:block;margin-left:auto;margin-right:auto;">
                     <br>
                     MNIST, the classical computer vision problem, for instance, can be changed to impose some regularity priors for testing. Here shown is a variant of the original problem, where I artificially installed an imbalanced distribution onto the training set such that certain class is highly downsampled. Since now we can approximate it directly, we can visualize them across the training time:
                     <br>
-                    <img src="./img/mnist.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
+                    <img src="./img/mnist.png" alt=""  style="width:70%;display:block;margin-left:auto;margin-right:auto;">
                     <br>
                     <br> We may also see that, with the regularity normalization I proposed, the model is much more robust to the nonstationary data distribution in the imbalanced MNIST problem.
                     <br>
@@ -87,11 +87,11 @@
                     <br>
                     <br> Similarly, we can apply the same regularization to the reinforcement learning games, e.g. LunarLanding v2 game in the OpenAI gym environment. We can track the unsupervised attention mechanism:
                     <br>
-                    <img src="./img/dqn.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
+                    <img src="./img/dqn.png" alt=""  style="width:70%;display:block;margin-left:auto;margin-right:auto;">
                     <br>
                     <br> We can also see that the performance is better with our regularization method.
                     <br>
-                    <img src="./img/game.png" alt=""  style="width:80%;display:block;margin-left:auto;margin-right:auto;">
+                    <img src="./img/game.png" alt=""  style="width:70%;display:block;margin-left:auto;margin-right:auto;">
                     
                 </p>
 
