--- a/proj/dynRSA/index.html
+++ b/proj/dynRSA/index.html
@@ -49,8 +49,8 @@
                 <h3 style="text-transform:none"> Publications </h3>
 
                 <p class="mb-5 text-primary">
-                    [1] Lin, B., Mur, M., Kietzmann, T., & Kriegeskorte, N. (2019). Visualizing Representational Dynamics with Multidimensional Scaling Alignment. <em> In Proceedings of Conference on Cognitive Computational Neuroscience (CCN), (pp. 1030-1033).</em> 
-                    <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.09264" style="color:#268fd6">https://arxiv.org/abs/1906.09264</a>
+                    [1] Lin, B., Mur, M., Kietzmann, T., & Kriegeskorte, N. (2019). Visualizing Representational Dynamics with Multidimensional Scaling Alignment. <em> In Proceedings of Conference on Cognitive Computational Neuroscience (CCN), (pp. 1030-1033).</em>
+                    <br> [<a href="https://arxiv.org/abs/1906.09264" style="color:#268fd6">arXiv</a>][<a href="https://www.baihan.nyc/bibTex/lin2019visualize.txt" style="color:#268fd6">bibTex</a>]&nbsp;
                     <!-- <br>
                     <br> [2] Lin, B., Cecchi, G., Bouneffouf, D., Reinen, J., & Rish, I. (2019). Reinforcement Learning Models of Human Behavior: Reward Processing in Mental Disorders. <em> 2019 NeurIPS Workshop on Biological and Artificial Reinforcement Learning (BARL) </em>
                     <br> <b> link: </b> <a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">https://arxiv.org/abs/1906.11286</a> -->
