[FEAT] move loader

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <head>
     <div w3-include-html="https://www.baihan.nyc/html/header.html"></div>
     <script> w3IncludeHTML(); </script>
+    <div id="loading"></div>
+
 </head>
 
 <body>
