--- a/html/navright.html
+++ b/html/navright.html
@@ -20,12 +20,12 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/viz/VoiceID">voiceID</a>
             </li>
-<!--             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/tensegrity">tensegrity</a>
-            </li>
- -->            <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/proteindesign">protein design</a>
-            </li>
+            <!--             <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/tensegrity">tensegrity</a>
+                        </li>
+             -->            <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/proteindesign">protein design</a>
+        </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/pinocchio"> pinocchio VR</a>
             </li>
@@ -35,6 +35,14 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/patch"> quanti patch </a>
             </li>
+            <div class="card" tabindex="0">
+                <span class="card__infoicon">
+                    <i class="fa fa-info"></i>
+                </span>
+                <h1 class="card__title">This is a title</h1>
+                <p class="card__description">Lorem ipsum dolor sit amet and this is all the lorem ipsum text I remember</p>
+                <p class="card__credits"></p>
+            </div>
             <li class="nav-item">
                 <span class="nav-link js-scroll-trigger"></span>
             </li>
