[FEAT] try expanding card

--- a/html/navright.html
+++ b/html/navright.html
@@ -35,7 +35,7 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/patch"> quanti patch </a>
             </li>
-            <div class="card" tabindex="0">
+            <div class="nav-item card" tabindex="0">
                 <span class="card__infoicon">
                     <i class="fa fa-info"></i>
                 </span>
