--- a/html/navright.html
+++ b/html/navright.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/mentalAI">mental AI</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/mentalAI"  onmouseover="openInfo1()" onmouseout="closeInfo1()">mental AI</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/dynRSA"> dynamic RSA</a>
@@ -35,14 +35,6 @@
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/patch"> quanti patch </a>
             </li>
-<!--            <div class="nav-item card" tabindex="0">-->
-<!--                <span class="card__infoicon">-->
-<!--                    <i class="fa fa-info"></i>-->
-<!--                </span>-->
-<!--                <h1 class="card__title">This is a title</h1>-->
-<!--                <p class="card__description">Lorem ipsum dolor sit amet and this is all the lorem ipsum text I remember</p>-->
-<!--                <p class="card__credits"></p>-->
-<!--            </div>-->
             <li class="nav-item">
                 <span class="nav-link js-scroll-trigger"></span>
             </li>
@@ -55,3 +47,8 @@
         </ul>
     </div>
 </nav>
+
+<div id="info1" class="moreinfo">
+    <div id="info1text" class="text">
+    </div>
+</div>
