[FEAT] disable text-transform

--- a/html/navright.html
+++ b/html/navright.html
@@ -49,6 +49,6 @@
 </nav>
 
 <div id="info1" class="moreinfo">
-    <div id="info1text" class="text">
+    <div id="info1text" class="infotext">
     </div>
 </div>
