[FEAT] add dynRSA gif

--- a/html/navright.html
+++ b/html/navright.html
@@ -52,3 +52,26 @@
     <div id="info1text" class="infotext">
     </div>
 </div>
+
+
+<div id="info2" class="moreinfo">
+    <div id="info2text" class="infotext">
+    </div>
+</div>
+
+
+<div id="info3" class="moreinfo">
+    <div id="info3text" class="infotext">
+    </div>
+</div>
+
+<div id="info4" class="moreinfo">
+    <div id="info4text" class="infotext">
+    </div>
+</div>
+
+
+<div id="info5" class="moreinfo">
+    <div id="info5text" class="infotext">
+    </div>
+</div>
