--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2019visualize.png" alt="lin2019visualize" border="1" style="width:100%">
+                            <img src="./img/publications/lin2019visualize.gif" alt="lin2019visualize" border="1" style="width:100%">
                         </div>
                         <div class="textcolumn">
                             [14]&nbsp; <b class="text-primary" id="p14"> Visualizing Representational Dynamics with Multidimensional Scaling Alignment &nbsp; </b>
