[FEAT] change pub img, init V2R

--- a/html/navright.html
+++ b/html/navright.html
@@ -6,19 +6,22 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/mentalAI"  onmouseover="openInfo1()" onmouseout="closeInfo1()">mental AI</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/mentalAI" onmouseover="openInfo1()" onmouseout="closeInfo()">mental AI</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/dynRSA"> dynamic RSA</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/dynRSA" onmouseover="openInfo2()" onmouseout="closeInfo()"> dynamic RSA</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/topology">topology</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/topology" onmouseover="openInfo3()" onmouseout="closeInfo()">topology</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/neuralMDL">neural MDL</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/neuralMDL" onmouseover="openInfo4()" onmouseout="closeInfo()">neural MDL</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/viz/VoiceID">voiceID</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/viz/VoiceID" onmouseover="openInfo5()" onmouseout="closeInfo()">voiceID</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/V2R" onmouseover="openInfo6()" onmouseout="closeInfo()">voiceID</a>
             </li>
             <!--             <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/tensegrity">tensegrity</a>
@@ -48,30 +51,7 @@
     </div>
 </nav>
 
-<div id="info1" class="moreinfo">
-    <div id="info1text" class="infotext">
-    </div>
-</div>
-
-
-<div id="info2" class="moreinfo">
-    <div id="info2text" class="infotext">
-    </div>
-</div>
-
-
-<div id="info3" class="moreinfo">
-    <div id="info3text" class="infotext">
-    </div>
-</div>
-
-<div id="info4" class="moreinfo">
-    <div id="info4text" class="infotext">
-    </div>
-</div>
-
-
-<div id="info5" class="moreinfo">
-    <div id="info5text" class="infotext">
+<div id="info" class="infowrapper">
+    <div id="infotext" class="infocontent">
     </div>
 </div>
