--- a/html/navright.html
+++ b/html/navright.html
@@ -21,7 +21,7 @@
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/viz/VoiceID" onmouseover="openInfo5()" onmouseout="closeInfo()">voiceID</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/V2R" onmouseover="openInfo6()" onmouseout="closeInfo()">voiceID</a>
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/V2R" onmouseover="openInfo6()" onmouseout="closeInfo()">vMirror</a>
             </li>
             <!--             <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/tensegrity">tensegrity</a>
