--- a/html/navright.html
+++ b/html/navright.html
@@ -26,9 +26,9 @@
             <!--             <li class="nav-item">
                             <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/tensegrity">tensegrity</a>
                         </li>
-             -->            <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/proteindesign">protein design</a>
-        </li>
+            <li class="nav-item">
+                <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/proteindesign">protein design</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="https://www.baihan.nyc/proj/pinocchio"> pinocchio VR</a>
             </li>
@@ -41,7 +41,7 @@
             <li class="nav-item">
                 <span class="nav-link js-scroll-trigger"></span>
             </li>
-            <!-- <li class="nav-item">
+             <li class="nav-item">
                         <span class="nav-link js-scroll-trigger"><br/><br /><br /><br /></span>
                     </li>
                     <li class="nav-item">
