[FEAT] update publications

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </div>
                 <div class="contactcolumn">
                     <h1 class="mb-0" style="display:inline;text-transform:none;">Ba<span><span class="letter color-change">.</span><span class="stack">ı</span></span>han Lin</h1>
+                    <!-- <h3 style="display:inline;text-transform:none;">&nbsp;&nbsp;(林&nbsp;柏翰)</h3></h1> -->
                     <!-- <h2 style="font-size:75px;display:inline;">aihan</h2>&nbsp;&nbsp; -->
                     <!-- <span class="text-primary"> -->
                     <!-- <h1 class="mb-0" style="display:inline"> L</h1><h2 class="mb-0" style="font-size:75px;display:inline">in</h2></span> -->
@@ -120,7 +121,7 @@
                     <td> now </td>
                     <td> my own time </td>
                     <td> mostly single-authored </td>
-                    <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p21">[21]</a><a href="#p22">[22]</a><a href="#p23">[23]</a> </td>
+                    <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p21">[21]</a><a href="#p20">[20]</a><a href="#p23">[23]</a> </td>
                     <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: forestgreen;">SB</span>,<span style="color: brown;">HCI</span> </td>
                 </tr>
                 <tr>
@@ -136,7 +137,7 @@
                     <td> 2017 </td>
                     <td> Microsoft </td>
                     <td> EPIC & HCI Groups </td>
-                    <td> <a href="#p20">[20]</a></td>
+                    <td> <a href="#p22">[22]</a></td>
                     <td> <span style="color: blue;">NS</span>,<span style="color: chocolate;">CV</span>,<span style="color: brown;">HCI</span></td>
                 </tr>
                 <tr>
@@ -243,7 +244,7 @@
                             <br/>
                             <p style="color:black"> under review </p>
                             [
-<!--                            <a href="https://arxiv.org/abs/" style="color:#268fd6">arXiv</a> ]&nbsp; [-->
+                            <!--                            <a href="https://arxiv.org/abs/" style="color:#268fd6">arXiv</a> ]&nbsp; [-->
                             arXiv to come ]&nbsp; [
                             <a href="./bibTex/lin2020voice.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
                             <a href="https://www.baihan.nyc/viz/VoiceID/" style="color:#268fd6">demo</a> ]&nbsp; [
@@ -258,23 +259,18 @@
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/lin2020keep.gif" alt="lin2020keep" border="1" style="width:100%">
+                            <img src="./img/publications/gonzalez2019enhance.png" alt="gonzalez2019enhance" border="1" style="width:100%">
                         </div>
                         <div class="textcolumn">
-                            [22]&nbsp;<b class="text-primary" id="p22"> Unsupervised Attention Mechanism across Neural Network Layers &nbsp; </b>
-                            <br />
-                            <b><span style="color: dimgray;">Baihan Lin</span></b>
+                            [22]&nbsp; <b class="text-primary" id="p22"> Elongated arm reach after a Pinocchio illusion in Virtual Reality &nbsp; </b>
+                            <br /> Mar Gonzalez-Franco, Christopher Berger, <b><span style="color: dimgray;">Baihan Lin</span></b>, Bigna Lenggenhager, and Jaron Lanier
                             <br />
                             <br/>
-                            <p style="color:black"> under review </p>
+                            <p style="color:black"> manuscript in preparation </p>
                             [
-<!--                            <a href="https://arxiv.org/abs/" style="color:#268fd6">arXiv</a> ]&nbsp; [-->
-                            arXiv to come ]&nbsp; [
-                            <a href="./bibTex/lin2020keep.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
-                            <a href="https://github.com/doerlbh/V2R" style="color:#268fd6">code</a> ]&nbsp; [
                             <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
                             <div class="abstract">
-                                <p> This paper proposed a new interaction paradigm in the virtual reality (VR) environments, which consists of a virtual mirror or window projected onto a virtual surface, representing the correct perspective geometry of a mirror or window reflecting the real world. This technique can be applied to various videos, live streaming apps, augmented and virtual reality settings to provide an interactive and immersive user experience. To support such a perspective-accurate representation, we implemented computer vision algorithms for feature detection and correspondence matching. To constrain the solutions, we incorporated an automatically tuning scaling factor upon the homography transform matrix such that each image frame follows a smooth transition with the user in sight. The system is a real-time rendering framework where users can engage their real-life presence with the virtual space. </p>
+                                <p> Perceived extension of the reach of one’s arm was observed in healthy humans after eliciting a Pinocchio Illusion—whereby a participant’s nose is illusorily elongated—in Virtual Reality. Self-administered tapping on the tip of the nose of the participants’ virtual avatar (using a hand-held controller) while the nose of the avatar slowly grew, produced a Pinocchio illusion an implicit outward drift in the participants’ arm, and the elongation of the perceived reach of their arm. We found a positive correlation between the extent of the implicit outward drift of the participants arm and the perceived reachability of distal objects. These results were found, both when the participants’ real nose was stimulated and when it was not. These findings are discussed in the context of theories on body schema and ownership, and open new avenues for hand grasp interaction with virtual objects out of arm’s-reach inside immersive setups. </p>
                             </div>
                         </div>
                     </div>
@@ -303,22 +299,31 @@
                         </div>
                     </div>
                 </li>
-                <br />
+            </ul>
+
+            <h3> 2020 </h3>
+            <br />
+            <ul class="fa-ul mb-0">
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
-                            <img src="./img/publications/gonzalez2019enhance.png" alt="gonzalez2019enhance" border="1" style="width:100%">
+                            <img src="./img/publications/lin2020keep.gif" alt="lin2020keep" border="1" style="width:100%">
                         </div>
                         <div class="textcolumn">
-                            [20]&nbsp; <b class="text-primary" id="p20"> Elongated arm reach after a Pinocchio illusion in Virtual Reality &nbsp; </b>
-                            <br /> Mar Gonzalez-Franco, Christopher Berger, <b><span style="color: dimgray;">Baihan Lin</span></b>, Bigna Lenggenhager, and Jaron Lanier
+                            [20]&nbsp;<b class="text-primary" id="p20"> Keep It Real: a Window to Real Reality in Virtual Reality &nbsp; </b>
+                            <br />
+                            <b><span style="color: dimgray;">Baihan Lin</span></b>
                             <br />
                             <br/>
-                            <p style="color:black"> manuscript in preparation </p>
+                            <p style="color:black"> IJCAI 2020 </p>
                             [
+                            <!--                            <a href="https://arxiv.org/abs/" style="color:#268fd6">arXiv</a> ]&nbsp; [-->
+                            arXiv to come ]&nbsp; [
+                            <a href="./bibTex/lin2020keep.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
+                            <a href="https://github.com/doerlbh/V2R" style="color:#268fd6">code</a> ]&nbsp; [
                             <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
                             <div class="abstract">
-                                <p> Perceived extension of the reach of one’s arm was observed in healthy humans after eliciting a Pinocchio Illusion—whereby a participant’s nose is illusorily elongated—in Virtual Reality. Self-administered tapping on the tip of the nose of the participants’ virtual avatar (using a hand-held controller) while the nose of the avatar slowly grew, produced a Pinocchio illusion an implicit outward drift in the participants’ arm, and the elongation of the perceived reach of their arm. We found a positive correlation between the extent of the implicit outward drift of the participants arm and the perceived reachability of distal objects. These results were found, both when the participants’ real nose was stimulated and when it was not. These findings are discussed in the context of theories on body schema and ownership, and open new avenues for hand grasp interaction with virtual objects out of arm’s-reach inside immersive setups. </p>
+                                <p> This paper proposed a new interaction paradigm in the virtual reality (VR) environments, which consists of a virtual mirror or window projected onto a virtual surface, representing the correct perspective geometry of a mirror or window reflecting the real world. This technique can be applied to various videos, live streaming apps, augmented and virtual reality settings to provide an interactive and immersive user experience. To support such a perspective-accurate representation, we implemented computer vision algorithms for feature detection and correspondence matching. To constrain the solutions, we incorporated an automatically tuning scaling factor upon the homography transform matrix such that each image frame follows a smooth transition with the user in sight. The system is a real-time rendering framework where users can engage their real-life presence with the virtual space. </p>
                             </div>
                         </div>
                     </div>
