[FEAT] update arxiv for v2r

--- a/index.html
+++ b/index.html
@@ -317,8 +317,7 @@
                             <br/>
                             <p style="color:black"> IJCAI 2020 </p>
                             [
-                            <!--                            <a href="https://arxiv.org/abs/" style="color:#268fd6">arXiv</a> ]&nbsp; [-->
-                            arXiv to come ]&nbsp; [
+                            <a href="https://arxiv.org/abs/2004.10313" style="color:#268fd6">arXiv</a> ]&nbsp; [
                             <a href="./bibTex/lin2020keep.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
                             <a href="https://github.com/doerlbh/V2R" style="color:#268fd6">code</a> ]&nbsp; [
                             <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
