--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -35,7 +35,8 @@
                 <br>
 
             </p>
-            <img src="./img/mentalRL.png" alt="" style="width:80%;display:block;margin-left:auto;margin-right:auto;">
+<!--            <img src="./img/mentalRL.png" alt="" style="width:80%;display:block;margin-left:auto;margin-right:auto;">-->
+            <iframe style="width:80%;display:block;margin-left:auto;margin-right:auto;" src="https://www.youtube.com/embed/CQBdQz1bmls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <br>
 
             <h3 style="text-transform:none"> Abstract </h3>
