[FEAT] add video links

--- a/index.html
+++ b/index.html
@@ -342,9 +342,10 @@
                             <p style="color:black"> AAMAS 2020 </p>
                             [
                             <a href="https://arxiv.org/abs/1906.11286" style="color:#268fd6">arXiv</a> ]&nbsp; [
-                            <!-- <a href="./pdfs/NIPS_HumanQL_poster.pdf" style="color:#268fd6">poster</a> ]&nbsp; [ -->
+                             <a href="./pdfs/AAMAS_MentalRL_slides.pdf" style="color:#268fd6">slides</a> ]&nbsp; [
                             <a href="./bibTex/lin2020astory.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
                             <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">code</a> ]&nbsp; [
+                            <a href="https://youtu.be/CQBdQz1bmls" style="color:#268fd6">video</a> ]&nbsp; [
                             <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
                             <div class="abstract">
                                 <p> Drawing an inspiration from behavioral studies of human decision making, we propose here a more general and flexible parametric framework for reinforcement learning that extends standard Q-learning to a two-stream model for processing positive and negative rewards, and allows to incorporate a wide range of reward-processing biases -- an important component of human decision making which can help us better understand a wide spectrum of multi-agent interactions in complex real-world socioeconomic systems, as well as various neuropsychiatric conditions associated with disruptions in normal reward processing. From the computational perspective, we observe that the proposed Split-QL model and its clinically inspired variants consistently outperform standard Q-Learning and SARSA methods, as well as recently proposed Double Q-Learning approaches, on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the Pac-Man game in a lifelong learning setting across different reward stationarities. </p>
