--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -36,8 +36,7 @@
 
             </p>
 <!--            <img src="./img/mentalRL.png" alt="" style="width:80%;display:block;margin-left:auto;margin-right:auto;">-->
-            <iframe style="width:80%;display:block;margin-left:auto;margin-right:auto;" src="https://www.youtube.com/embed/CQBdQz1bmls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/CQBdQz1bmls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            <br>
 
             <h3 style="text-transform:none"> Abstract </h3>
 
