--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -36,8 +36,10 @@
 
             </p>
 <!--            <img src="./img/mentalRL.png" alt="" style="width:80%;display:block;margin-left:auto;margin-right:auto;">-->
-            <iframe style="width:80%;height:0;overflow:hidden;position:relative;padding-top:30px;padding-bottom:56.25%;display:block;margin-left:auto;margin-right:auto;" src="https://www.youtube.com/embed/CQBdQz1bmls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            <br>
-
+            <div style="border:0;position:absolute;top:0;left:0;width:80%;height:80%">
+                <iframe style="height:0;overflow:hidden;position:relative;padding-top:30px;padding-bottom:56.25%;display:block;margin-left:auto;margin-right:auto;" src="https://www.youtube.com/embed/CQBdQz1bmls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <br>
             <h3 style="text-transform:none"> Abstract </h3>
 
             <p class="mb-5 text-primary">
