--- a/proj/mentalAI/index.html
+++ b/proj/mentalAI/index.html
@@ -36,9 +36,8 @@
 
             </p>
 <!--            <img src="./img/mentalRL.png" alt="" style="width:80%;display:block;margin-left:auto;margin-right:auto;">-->
-            <div style="border:0;position:absolute;top:0;left:0;width:80%;height:80%">
-                <iframe style="height:0;overflow:hidden;position:relative;padding-top:30px;padding-bottom:56.25%;display:block;margin-left:auto;margin-right:auto;" src="https://www.youtube.com/embed/CQBdQz1bmls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+            <div style="height:0;position:relative;padding-top:30px;padding-bottom:56.25%;overflow:hidden">
+                <iframe style="border:0;position:absolute;top:0;left:0;width:100%;height:100%" src="https://www.youtube.com/embed/CQBdQz1bmls" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>            </div>
             <br>
             <h3 style="text-transform:none"> Abstract </h3>
 
