[FEAT] update publication

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <td> now </td>
                     <td> my own time </td>
                     <td> mostly single-authored </td>
-                    <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p21">[21]</a><a href="#p20">[20]</a><a href="#p23">[23]</a> </td>
+                    <td> <a href="#p10">[10]</a><a href="#p13">[13]</a><a href="#p20">[20]</a><a href="#p21">[21]</a><a href="#p23">[23]</a><a href="#p24">[24]</a> </td>
                     <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: forestgreen;">SB</span>,<span style="color: brown;">HCI</span> </td>
                 </tr>
                 <tr>
@@ -129,7 +129,7 @@
                     <td> now </td>
                     <td> IBM </td>
                     <td> CompNeuro & AI Foundations Groups</td>
-                    <td> <a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a><a href="#p19">[19]</a> </td>
+                    <td> <a href="#p7">[7]</a><a href="#p8">[8]</a><a href="#p11">[11]</a><a href="#p15">[15]</a><a href="#p18">[18]</a><a href="#p19">[19]</a><a href="#p25">[25]</a> </td>
                     <td> <span style="color: blue;">NS</span>,<span style="color: red;">ML</span>,<span style="color: chocolate;">CV</span>,<span style="color: purple;">GT</span>,<span style="color: salmon;">TM</span> </td>
                 </tr>
                 <tr>
@@ -226,11 +226,62 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
             <h2 class="mb-5">Publications</h2>
-            <p class="mb-5 text-primary"> <b>23</b> total = <b>11</b> conferences + <b>6</b> journals + <b>6</b> manuscript / arXiv preprints &nbsp;
+            <p class="mb-5 text-primary"> <b>25</b> total = <b>14</b> conferences + <b>6</b> journals + <b>5</b> manuscript / arXiv preprints &nbsp;
                 <br /> (click on <b> abstract </b> to learn more) &nbsp; </p>
             <h3> ongoing...</h3>
             <br />
             <ul class="fa-ul mb-0">
+                <li>
+                    <div class="row">
+                        <div class="imgcolumn">
+                            <img src="./img/publications/lin2020unified.png" alt="lin2020unified" border="1" style="width:100%">
+                        </div>
+                        <div class="textcolumn">
+                            [23]&nbsp;<b class="text-primary" id="p25"> Unified Models of Human Behavioral Agents in Bandits, Contextual Bandits and RL </b>
+                            <br />
+                            <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
+                            <br />
+                            <br/>
+                            <p style="color:black"> under review </p>
+                            [
+                            <!--                            <a href="https://arxiv.org/abs/" style="color:#268fd6">arXiv</a> ]&nbsp; [-->
+                            arXiv to come ]&nbsp; [
+                            <a href="./bibTex/lin2020unified.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
+                            <a href="https://github.com/doerlbh/mentalRL" style="color:#268fd6">code</a> ]&nbsp; [
+                            <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
+                            <div class="abstract">
+                                <p> Artificial behavioral agents are often evaluated based on their consistent behaviors and performance to take sequential actions in an environment to maximize some notion of cumulative reward. However, human decision making in real life usually involves different strategies and behavioral trajectories that lead to the same empirical outcome. Motivated by clinical literature of a wide range of neurological and psychiatric disorders, we propose here a more general and flexible parametric framework for sequential decision making that involves a two-stream reward processing mechanism. We demonstrated that this framework is flexible and unified enough to incorporate a family of problems spanning Multi-armed bandits (MAB), contextual bandits (CB) and reinforcement learning (RL), which decompose the sequential decision making process in different levels. Inspired by the known reward processing abnormalities of many mental disorders, our clinically-inspired agents demonstrated interesting behavioral trajectories and comparable performance on simulated tasks with particular reward distributions, a real-world dataset capturing human decision-making in gambling tasks, and the PacMan game across different reward stationarities in a lifelong learning setting.  </p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <br />
+                <li>
+                    <div class="row">
+                        <div class="imgcolumn">
+                            <img src="./img/publications/lin2020speaker.png" alt="lin2020voice" border="1" style="width:100%">
+                        </div>
+                        <div class="textcolumn">
+                            [23]&nbsp;<b class="text-primary" id="p24"> Speaker Diarization as a Fully Online Learning Problem in MiniVox </b>
+                            <br />
+                            <b><span style="color: dimgray;">Baihan Lin</span></b>, Xinxin Zhang
+                            <br />
+                            <br/>
+                            <p style="color:black"> under review </p>
+                            [
+                            <!--                            <a href="https://arxiv.org/abs/" style="color:#268fd6">arXiv</a> ]&nbsp; [-->
+                            arXiv to come ]&nbsp; [
+                            <a href="./bibTex/lin2020speaker.txt" style="color:#268fd6">bibTex</a> ]&nbsp; [
+                            <a href="https://github.com/doerlbh/MiniVox" style="color:#268fd6">code</a> ]&nbsp; [
+                            <a href="https://www.baihan.nyc/viz/VoiceID/" style="color:#268fd6">demo</a> ]&nbsp; [
+                            <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
+                            <div class="abstract">
+                                <p> We proposed a novel AI framework to conduct real-time multi-speaker diarization and recognition without prior registration and pretraining in a fully online learning setting. Our contributions are two-fold. First, we proposed a new benchmark to evaluate the rarely studied fully online speaker diarization problem. We built upon existing datasets of real world utterances to automatically curate MiniVox, an experimental environment which generates infinite configurations of continuous multi-speaker speech stream. Secondly, we considered the practical problem of online learning with episodically revealed rewards and introduced a solution based on semi-supervised and self-supervised learning methods. Lastly, we provided a workable web-based recognition system which interactively handles the cold start problem of new user's addition by transferring representations of old arms to new ones with an extendable contextual bandit. We demonstrated that our proposed method obtained robust performance in the online MiniVox framework.  </p>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <br />
                 <li>
                     <div class="row">
                         <div class="imgcolumn">
