[FEAT] add citation

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="publications">
         <div class="my-auto">
             <h2 class="mb-5">Publications</h2>
-            <p class="mb-5 text-primary"> <b>25</b> total = <b>14</b> conferences + <b>6</b> journals + <b>5</b> manuscript / arXiv preprints &nbsp;
+            <p class="mb-5 text-primary"> <b>25</b> total = <b>12</b> conferences + <b>6</b> journals + <b>7</b> manuscript / arXiv preprints &nbsp;
                 <br /> (click on <b> abstract </b> to learn more) &nbsp; </p>
             <h3> ongoing...</h3>
             <br />
@@ -237,7 +237,7 @@
                             <img src="./img/publications/lin2020unified.png" alt="lin2020unified" border="1" style="width:100%">
                         </div>
                         <div class="textcolumn">
-                            [23]&nbsp;<b class="text-primary" id="p25"> Unified Models of Human Behavioral Agents in Bandits, Contextual Bandits and RL </b>
+                            [25]&nbsp;<b class="text-primary" id="p25"> Unified Models of Human Behavioral Agents in Bandits, Contextual Bandits and RL </b>
                             <br />
                             <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
                             <br />
@@ -262,7 +262,7 @@
                             <img src="./img/publications/lin2020speaker.png" alt="lin2020voice" border="1" style="width:100%">
                         </div>
                         <div class="textcolumn">
-                            [23]&nbsp;<b class="text-primary" id="p24"> Speaker Diarization as a Fully Online Learning Problem in MiniVox </b>
+                            [24]&nbsp;<b class="text-primary" id="p24"> Speaker Diarization as a Fully Online Learning Problem in MiniVox </b>
                             <br />
                             <b><span style="color: dimgray;">Baihan Lin</span></b>, Xinxin Zhang
                             <br />
@@ -301,7 +301,7 @@
                             <a href="https://www.baihan.nyc/viz/VoiceID/" style="color:#268fd6">demo</a> ]&nbsp; [
                             <a class="collapsible" style="color:#268fd6">abstract&nbsp;</a> ]
                             <div class="abstract">
-                                <p> We proposed a novel AI framework to conduct real-time multi-speaker recognition without prior registration by learning the speaker identification on the fly. We considered the practical problem of online learning with episodically revealed rewards and introduced a solution based on semi-supervised and self-supervised learning methods in a web app.  </p>
+                                <p> We proposed a novel AI framework to conduct real-time multi-speaker recognition without prior registration by learning the speaker identification on the fly. We considered the practical problem of online learning with episodically revealed rewards and introduced a solution based on semi-supervised and self-supervised learning methods in a web-based system.  </p>
                             </div>
                         </div>
                     </div>
